<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Appium Test Helper</string>

    <string name="test_mode">Test mode</string>
    <string name="package_names_hint">Package names…</string>
    <string name="save_package_names">Save package names</string>
    <string name="package_names_instructions"><b>Package names</b>\nWrite the tested apps package names, each in a new line, for example:\ncom.aaa.bbb\ncom.ccc.xxx\ncom.yyy.zzz</string>
    <string name="test_mode_instructions"><b>Test mode</b>\nThe value set here is returned to other apps through a content provider. It can be used to disable analytics during automated testing.\n\ncontent://com.sengami.appium_test_helper_android.provider/</string>
    <string name="toast_instructions" tools:ignore="TypographyDashes"><b>Toasts</b>\nWill show a toast with text \"This \\is \\a \\sample \\text\" when the command below is used through ADB.\n\nadb shell am broadcast -a com.sengami.appium_test_helper_android.toast --es message \"This is a sample text\" -n com.sengami.appium_test_helper_android/.ToastBroadcastReceiver</string>
    <string name="vibration_instructions" tools:ignore="TypographyDashes"><b>Vibrations</b>\nWill vibrate the device for 2 seconds when the command below is used through ADB.\n\nadb shell am broadcast -a com.sengami.appium_test_helper_android.vibration --el duration 2000 -n com.sengami.appium_test_helper_android/.VibrationBroadcastReceiver</string>
    <string name="vibration_notification">Vibration: %1$dms, click to dismiss</string>

    <string name="message_package_names_set">Package names set</string>

    <string name="error_content_provider">Cannot register Bounty Test Lab.</string>
</resources>