<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/test_mode_container"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:gravity="center">

                <Switch
                    android:id="@+id/test_mode_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchPadding="8dp"
                    android:text="@string/test_mode" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <EditText
                android:id="@+id/package_names_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/package_names_instructions"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword|textMultiLine"
                android:lines="5" />

            <Button
                android:id="@+id/save_package_names_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_package_names" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/test_mode_instructions" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/toast_instructions" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/vibration_instructions" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

        </LinearLayout>

    </ScrollView>

</layout>